force-app/main/default/objects/THOR_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Sheet_Code__c</fullName>
        <label>Check Sheet Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Sheet_Name__c</fullName>
        <label>Check Sheet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Number__c</fullName>
        <label>Clearance Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date_From__c</fullName>
        <label>Create Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Date_To__c</fullName>
        <label>Create Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <label>Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>- Notification Description 
- Order Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EQCC_Code__c</fullName>
        <label>EQCC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EQCC_Name__c</fullName>
        <label>EQCC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_type__c</fullName>
        <label>Filter type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HomeNotification</fullName>
                </value>
                <value>
                    <fullName>HomeOrder</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>EQCC</fullName>
                </value>
                <value>
                    <fullName>My Approval</fullName>
                </value>
                <value>
                    <fullName>Work Clearance</fullName>
                </value>
                <value>
                    <fullName>NotificationHistorical</fullName>
                    <label>Notification Historical</label>
                </value>
                <value>
                    <fullName>OrderHistorical</fullName>
                    <label>Order Historical</label>
                </value>
                <value>
                    <fullName>WorkClearanceHistorical</fullName>
                    <label>Work Clearance Historical</label>
                </value>
                <value>
                    <fullName>EQCCHistorical</fullName>
                    <label>EQCC Historical</label>
                </value>
                <value>
                    <fullName>ODM Notification</fullName>
                </value>
                <value>
                    <fullName>ODM_HistoricalNotification</fullName>
                </value>
                <value>
                    <fullName>ODM WorkClearance</fullName>
                </value>
                <value>
                    <fullName>ODM_HistoricalWorkClearance</fullName>
                </value>
                <value>
                    <fullName>ODM WorkClearance Inspection</fullName>
                </value>
                <value>
                    <fullName>ODM WorkClearance Verification</fullName>
                </value>
                <value>
                    <fullName>ODM NotificationSwitchOver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <label>Functional Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <label>Main Work Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Plant__c</fullName>
        <label>Maintenance Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotificationTypeMulti__c</fullName>
        <label>NotificationTypeMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <label>Notification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderTypeMulti__c</fullName>
        <label>OrderTypeMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM01</fullName>
                </value>
                <value>
                    <fullName>PM01</fullName>
                </value>
                <value>
                    <fullName>SH01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM01</fullName>
                </value>
                <value>
                    <fullName>PM01</fullName>
                </value>
                <value>
                    <fullName>SH01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plant_Section__c</fullName>
        <label>Plant Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorityMulti__c</fullName>
        <label>Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Float Time - 1M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 3M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 6M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 9M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 12M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 15M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 18M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Float Time - 1M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 3M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 6M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 9M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 12M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 15M</fullName>
                </value>
                <value>
                    <fullName>Float Time - 18M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date_Form__c</fullName>
        <label>Requested Date Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date_To__c</fullName>
        <label>Requested Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <label>Responsible Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusMulti__c</fullName>
        <label>StatusMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Delete Flag</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Need Revision</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date_From__c</fullName>
        <label>Submission Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Date_To__c</fullName>
        <label>Submission Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Super_Order__c</fullName>
        <label>Super Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>THOR_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Status__c</fullName>
        <label>Work Clearance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Delete Flag</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>EXTD</fullName>
                    <isActive>false</isActive>
                    <label>EXTD</label>
                </value>
                <value>
                    <fullName>EXTH</fullName>
                    <isActive>false</isActive>
                    <label>EXTH</label>
                </value>
                <value>
                    <fullName>WCCL</fullName>
                    <isActive>false</isActive>
                    <label>WCCL</label>
                </value>
                <value>
                    <fullName>WIP1</fullName>
                    <isActive>false</isActive>
                    <label>WIP1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>THOR Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Main_Work_Center__c</columns>
        <columns>User__c</columns>
        <columns>Notification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Worawet</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>THOR Filter Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>